--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:16 AS build-stage
 
 ENV REACT_APP_BACKEND_URL=http://localhost:3000
+ENV CI=TRUE
 
 WORKDIR /usr/src/app
 
@@ -9,6 +10,8 @@ COPY . .
 RUN npm ci
 
 RUN npm run build
+
+RUN npm run test
 
 FROM nginx:1.20-alpine
 
