--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -6,14 +6,19 @@ http {
   server {
     listen 80;
 
-    # Requests starting with root (/) are handled
-    location / {
-      # The following 3 lines are required for the hot loading to work (websocket).
+    location /api/ {
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
       
-      # Requests are directed to http://localhost:3000
+      proxy_pass http://server:3000/;
+    }
+
+    location / {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      
       proxy_pass http://todo-app:3000;
     }
   }
